//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null]
  archive Archive
  aricles Article [not null]
  issues Issue [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Article {
  id String [pk]
  title String
  description String
  published Boolean
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  authorId String
  issueId String
  author User
  issue Issue
  archive Archive [not null]
}

Table Issue {
  id String [pk]
  title String
  description String
  published Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  authorId String
  author User
  articles Article [not null]
  archive Archive [not null]
}

Table Archive {
  id String [pk]
  userId String [unique]
  user User
  article Article [not null]
  issue Issue [not null]
}

Table ArchiveToArticle {
  archiveId String [ref: > Archive.id]
  articleId String [ref: > Article.id]
}

Table ArchiveToIssue {
  archiveId String [ref: > Archive.id]
  issueId String [ref: > Issue.id]
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.authorId > User.id

Ref: Article.authorId > User.id

Ref: Article.issueId > Issue.id

Ref: Issue.authorId > User.id

Ref: Archive.userId - User.id